plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.dolai'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '21'

java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(21))
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral() // Maven Central에 의존성 검색
	// ArangoDB 7.x 의 jackson-serde 등 추가 라이브러리 제공 위치
	maven {
		url 'https://maven.arangodb.com/repository/java'
	}
}

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter'

	// Spring Boot 기본 의존성
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// .env 파일 로드를 위한 dotenv-java 추가
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	// MySQL JDBC 드라이버
	implementation 'mysql:mysql-connector-java:8.0.33'

	// ArangoDB (안정 버전)
	//implementation 'com.arangodb:arangodb-spring-data:3.6.0'
	implementation 'com.arangodb:arangodb-java-driver:6.7.2'

	// JSON 직렬화/역직렬화 지원 (Jackson)
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//OAuth
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// Lombok (코드 간소화)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//Webflux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// 개발 편의 기능
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// 테스트 관련 라이브러리
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// 검증
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// 스프링 웹소켓
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// mediasoup
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'io.projectreactor.netty:reactor-netty-core:1.0.34'
	implementation 'io.projectreactor.netty:reactor-netty-http:1.0.34'

	implementation 'com.fasterxml.jackson.core:jackson-databind'

	implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

	// ArangoDB Java Driver 6.x가 Apache HttpClient 의존성을 필요로 함
	implementation 'org.apache.httpcomponents:httpclient:4.5.14'

	// 형태소 분석기 라이브러리
	implementation 'org.openkoreantext:open-korean-text:2.1.0'

	// Gson 라이브러리
	implementation 'com.google.code.gson:gson:2.10.1'

	// docx4j
//	implementation 'org.docx4j:docx4j-JAXB-ReferenceImpl:11.4.10'

	// JAXB 관련 필수 구성 (Java 11 이상에서 꼭 필요)
	implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
	implementation 'org.docx4j:docx4j-JAXB-ReferenceImpl:11.4.10'

}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << "-parameters"
}